add geoshen bar draft

--- a/general-update-pattern-04.html
+++ b/general-update-pattern-04.html
@@ -92,7 +92,8 @@ function update(data) {
                 return i * 100;
             });
 
-    text.enter().append('text')
+    text.enter()
+        .append('text')
         .attr('class', 'enter')
         .attr('dy', '0.35em')
         .attr('y', -60)
