--- a/simple-statistics/index.html
+++ b/simple-statistics/index.html
@@ -8,6 +8,7 @@
 <div id='form'>
     <input checked='true' type='radio' name='scale' id='jenks9' /><label for='jenks9'>jenks 9</label>
     <input type='radio' name='scale' id='quantize' /><label for='quantize'>quantize</label>
+    <input type='radio' name='scale' id='quantile' /><label for='quantile'>quantile</label>
 </div>
 
 <script src="simple_statistics.js"></script>
